# pluginscpp

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: generate.js  resource.cmake  sol2.cmake
example/: CMakeLists.txt  main.cpp  plugin.cpp  plugin.json
include/plugins/: defines.hpp  iplugin-provider.hpp  iplugin.hpp  plugin-manager.hpp  pluginspec.hpp
include/plugins/dlplugin/: dlplugin.hpp  dlpluginloader.hpp  dlpluginspec.hpp
src/: CMakeLists.txt  helpers.cpp  helpers.hpp  iplugin-provider.cpp  iplugin.cpp  plugin-manager.cpp  plugin-manager_p.cpp  plugin-manager_p.hpp  pluginspec.cpp  pluginspec_p.cpp  pluginspec_p.hpp  pluginspec_p.hpp.autosave
src/dlplugin/: CMakeLists.txt  dlplugin.cpp  dlpluginloader.cpp  dlpluginspec.cpp  dlpluginspec_p.cpp  dlpluginspec_p.hpp
src/luaplugin/: CMakeLists.txt
src/utils/: CmakeLists.txt
src/utils/include/utils/: algorithms.hpp
